[gd_scene load_steps=19 format=3 uid="uid://blm4fv82v5ty5"]

[ext_resource type="Script" path="res://scripts/enemigo.gd" id="1_uub3p"]
[ext_resource type="Texture2D" uid="uid://0tleit7kww0a" path="res://assets/sprites/mucu-sheetv3.png" id="2_glrq0"]
[ext_resource type="AudioStream" uid="uid://1hx5x8dl7ttk" path="res://assets/sfx/dead.ogg" id="3_2rl5d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sbidq"]
atlas = ExtResource("2_glrq0")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0n8q7"]
atlas = ExtResource("2_glrq0")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vy52h"]
atlas = ExtResource("2_glrq0")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqm22"]
atlas = ExtResource("2_glrq0")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpchy"]
atlas = ExtResource("2_glrq0")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dct8r"]
atlas = ExtResource("2_glrq0")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_544a4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbidq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0n8q7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy52h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqm22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpchy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dct8r")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_vme42"]
atlas = ExtResource("2_glrq0")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyqe3"]
atlas = ExtResource("2_glrq0")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1oq8"]
atlas = ExtResource("2_glrq0")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnd23"]
atlas = ExtResource("2_glrq0")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg3pv"]
atlas = ExtResource("2_glrq0")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i30v2"]
atlas = ExtResource("2_glrq0")
region = Rect2(80, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_4ymi4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vme42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyqe3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1oq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnd23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg3pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i30v2")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ccvul"]
radius = 6.0

[node name="Enemigo" type="Node2D"]
script = ExtResource("1_uub3p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_544a4")
autoplay = "default"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4ymi4")
autoplay = "default"

[node name="RayCastIzq" type="RayCast2D" parent="."]
position = Vector2(0, 4)
target_position = Vector2(-8, 0)

[node name="RayCastDer" type="RayCast2D" parent="."]
position = Vector2(0, 4)
target_position = Vector2(8, 0)

[node name="RayCastAbjIzq" type="RayCast2D" parent="."]
position = Vector2(-6, 4)
target_position = Vector2(0, 5)

[node name="RayCastAbjDer" type="RayCast2D" parent="."]
position = Vector2(6, 4)
target_position = Vector2(0, 5)

[node name="Killzone" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_ccvul")

[node name="Timer" type="Timer" parent="."]
process_mode = 3
wait_time = 8.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("3_2rl5d")

[connection signal="body_entered" from="Killzone" to="." method="_on_killzone_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
